src/objects/deduction__c.object
<CustomObject>
    <fields>
        <fullName>EnergyLinkTypeDesc__c</fullName>
        <label>Energy Link Type Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossAmount__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LineComment__c</fullName>
        <label>Line Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpTypeCode__c</fullName>
        <label>Op Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpTypeDesc__c</fullName>
        <label>Op Type Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerAmount__c</fullName>
        <label>Owner Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OwnerPercent__c</fullName>
        <label>Owner Percent</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrtTypeCode__c</fullName>
        <label>Prt Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoyaltyLineItem__c</fullName>
        <label>Royalty Line Item</label>
        <referenceTo>Royalty_Line_Item__c</referenceTo>
        <relationshipLabel>Deductions</relationshipLabel>
        <relationshipName>Deductions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detailId__c</fullName>
        <externalId>true</externalId>
        <label>DetailId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distributionPercent__c</fullName>
        <label>Distribution Percent</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <label>Deduction</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Deduction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deductions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>